tests/snapshots/snapshots__interpreter@sugar_letpat.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/sugar_letpat.pr
---
12
6
10
6
3
23
=> ()
