tests/snapshots/snapshots__interpreter@sugar_try.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/sugar_try.pr
---
3
-3
8
-5
=> ()
