tests/snapshots/snapshots__interpreter@syntax_walk.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/syntax_walk.pr
---
7
true
7
=> ()
