tests/snapshots/snapshots__interpreter@teleport.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/teleport.pr
---
40
11
=> ()
