tests/snapshots/snapshots__interpreter@tensor.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/tensor.pr
---
2
6
1
6
-1
-2
-3
100
1
7
9
3
4
6
19
22
43
50
36
2.5
24
12
4
20
=> ()
