tests/snapshots/snapshots__interpreter@thunk_effect_absorb.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/thunk_effect_absorb.pr
---
7
3
=> ()
