tests/snapshots/snapshots__interpreter@trmc_under_multishot.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/trmc_under_multishot.pr
---
5
9
[3, 2, 1, 2, 1]
=> ()
