tests/snapshots/snapshots__interpreter@tuple_eq_ord.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/tuple_eq_ord.pr
---
true
false
false
true
false
true
false
true
true
true
true
true
true
[(1, 1), (1, 2), (2, 0), (2, 1)]
20
30
false
=> ()
